--- a/index.html
+++ b/index.html
@@ -7,6 +7,58 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <p>my very 1st assignment </p>
+    <header class="header-style">
+        <ul class="items">
+            <li> 
+                <h1>All Things Are Possible <br>If You Beleive</h1>
+            </li>
+        <li> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Reiciendis doloribus inventore ab culpa aperiam natus,<br> illo sequi aut ex autem dolorum mollitia pariatur quia vel necessitatibus dolore praesentium deleniti quasi!</p></li>
+        <li> <button class="btn-primary">  Contact Us</button></li></ul>
+
+    </header>
+
+    <main>
+ <section > <div class=" main-section">
+<div>
+    photo
+</div>
+<div> text</div> 
+
+</div>
+ </section> <h1 class="h1-style"></h1>
+ <div>
+    <div>
+        <ul >
+            <li> icon</li>
+            <li> <h3> Web Development</h3></li>
+            <li> <h4>I want to start</h4></li>
+        </ul>
+    </div>
+    <div><ul>
+        <li> icon</li>
+        <li> <h3> Web Development</h3></li>
+        <li> <h4>I want to start</h4></li>
+    </ul></div>
+    <div><ul>
+        <li> icon</li>
+        <li> <h3> Web Development</h3></li>
+        <li> <h4>I want to start</h4></li>
+    </ul></div>
+    <div><ul>
+        <li> icon</li>
+        <li> <h3> Web Development</h3></li>
+        <li> <h4>I want to start</h4></li>
+    </ul></div>
+ </div>
+ <section>
+
+ </section>
+ <section>
+
+ </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
